# django-multipage-form

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
multipage_form/: apps.py  forms.py  models.py  views.py
multipage_form/migrations/: 0001_initial.py
multipage_form/static/multipage_form/css/: multipage_form.css
multipage_form/templates/multipage_form/: history_link.html  summary.html
multipage_form/templatetags/: multipage_form_tags.py
