[tool.poetry]
name = "multipage-form"
version = "1.0.0"
description = "Django app supporting model forms that can span multiple pages"
homepage = "https://github.com/ImaginaryLandscape/django-multipage-form"
readme = "README.md"
authors = ["Imagescape <info@imagescape.com>"]
maintainers = ["Noel Taylor <ntaylor@imagescape.com>"]
license = "MIT"
packages = [ { include = "multipage_form" } ]
repository = "https://gitlab.com/ImaginaryLandscape/django-multipage-form"
keywords = [ "django", "forms", "multipage" ]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]
include = [
    "LICENSE",
    "CHANGELOG.md",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
